Fixes for vertical alignment in em and i elements

--- a/canonical.less
+++ b/canonical.less
@@ -85,7 +85,9 @@ dfn[title] {
  */
 
 b,
-strong {
+strong,
+i,
+em {
     /* 1 */
     font-weight: bold;
     /* 2 */
